# algo-c

./: CMakeLists.txt  README.md  assert.c  assert.h  build_and_run.ps1  build_and_run.sh  elem.h  linked_list.c  linked_list.h  main.c  vector.c  vector.h  vector_and_linkedlist.c  vector_and_linkedlist.h
tests/: test_linked_list.c  test_vector.c  test_vector_and_linkedlist.c
